--- a/login.html
+++ b/login.html
@@ -46,7 +46,7 @@
       </label>
      </div> 
     
-    <button type="submit" class="btn btn-primary"><a href="https://moaksh.github.io/DPS-Rohini/index.html" style="color:white;padding-top:10px;padding-bottom: 10px;">Submit</a></button>
+    <button type="submit" class="btn btn-primary"><a href="https://moaksh.github.io/DPS-Rohini/" style="color:white;padding-top:10px;padding-bottom: 10px;">Submit</a></button>
   </form>
 </div>
 </div>
